# zero-downtime-migrations

./: .pre-commit-hooks.yaml  Cargo.toml  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: discovery.rs  error.rs  lib.rs  main.rs  parser.rs
src/ast/: extractor.rs  mod.rs  operations.rs
src/config/: mod.rs
src/diagnostics/: diagnostic.rs  mod.rs  severity.rs  span.rs
src/git/: mod.rs
src/rules/: mod.rs  r001_non_concurrent_add_index.rs  r002_unique_constraint_without_index.rs  r003_runsql_create_index.rs  r004_missing_atomic_false.rs  r005_remove_field_without_separate.rs  r006_add_field_foreign_key.rs  r007_fk_without_index.rs  r008_disallowed_file_changes.rs  r009_separate_db_state_same_pr.rs  r010_add_field_not_null.rs  r011_rename_field.rs  r012_irreversible_run_python.rs  r013_irreversible_run_sql.rs  r014_model_imports.rs  r015_alter_field_not_null.rs  r016_non_concurrent_remove_index.rs  r017_non_concurrent_add_constraint.rs
tests/: cli_integration.rs  e2e.rs
tests/common/: mod.rs
tests/fixtures/rules/R001/: fail_non_concurrent_add_index.py  pass_add_index_on_new_model.py  pass_concurrent_add_index.py
tests/fixtures/rules/R002/: fail_unique_constraint.py
tests/fixtures/rules/R003/: fail_run_sql_create_index.py
tests/fixtures/rules/R006/: fail_add_field_fk.py
tests/fixtures/rules/R010/: fail_add_field_not_null.py
tests/fixtures/rules/R011/: fail_rename_field.py
tests/fixtures/rules/R012/: fail_run_python_irreversible.py
tests/fixtures/rules/R014/: fail_model_import.py
tests/fixtures/rules/R015/: fail_alter_field_not_null.py
tests/fixtures/rules/R016/: fail_remove_index_non_concurrent.py
