[package]
name = "zero-downtime-migrations"
version = "0.1.0"
edition = "2021"
description = "A PostgreSQL migration safety linter for Django"
license = "MIT"
repository = "https://github.com/Photoroom/zero-downtime-migrations"
readme = "README.md"
keywords = ["django", "postgresql", "migrations", "linter", "database"]
categories = ["command-line-utilities", "development-tools"]
default-run = "zdm"

[[bin]]
name = "zdm"
path = "src/main.rs"

[[bin]]
name = "zero-downtime-migrations"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "2"

# Parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# File discovery
walkdir = "2"
glob = "0.3"

# Error handling & diagnostics
thiserror = "1"
miette = { version = "7", features = ["fancy"] }

# Git integration (vendored-openssl for cross-compilation)
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Utilities
once_cell = "1"
serde_json = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml", "json"] }
tempfile = "3"
pretty_assertions = "1"
serde_json = "1"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
