[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zero-downtime-migrations"
version = "0.1.0"
description = "A PostgreSQL migration safety linter for Django"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Photoroom", email = "eng@photoroom.com" }
]
keywords = ["django", "postgresql", "migrations", "linter", "database", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/Photoroom/zero-downtime-migrations"
Repository = "https://github.com/Photoroom/zero-downtime-migrations"
Documentation = "https://github.com/Photoroom/zero-downtime-migrations#readme"
"Bug Tracker" = "https://github.com/Photoroom/zero-downtime-migrations/issues"

[tool.maturin]
# Build as a binary, not a Python extension
bindings = "bin"
# Strip symbols for smaller binaries
strip = true
# Exclude test files from the wheel
exclude = [
    "tests/**/*",
    "target/**/*",
]

[tool.zdm]
# Example configuration for zdm itself
# select = ["R001", "R002"]
# ignore = []
# warnings-as-errors = false
